--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.0",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "express-async-await": "^1.1.0",
-    "express-fileupload": "^1.1.6-alpha.5",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.5",
+    "mongoose": "^5.13.14",
     "mongoose-long": "^0.2.1",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.2",
-    "node-fetch": "^2.6.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "node-fetch": "^2.6.7",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.4"
   }
 }
